fixtures/gate/accept/primitive_head_wins.oath
(defn shadow [] [(not Bool)] Bool (not not))
