fixtures/gate/reject/eq_on_function.oath
(defn bad [] [(f (-> Int Int))] Bool (== f f))
